--- a/Movie/Movie.csproj
+++ b/Movie/Movie.csproj
@@ -130,6 +130,7 @@
     <Content Include="scripts\controllers.js" />
     <Content Include="scripts\services.js" />
     <Content Include="views\header.html" />
+    <Content Include="views\movieDetails.html" />
     <Content Include="views\moviesList.html" />
     <Content Include="Web.config" />
   </ItemGroup>
